# tts-player

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  run-tests.sh  tailwind.config.js  test_long_notification.txt  test_short.txt  tsconfig.json  tts-with-clipboard.sh  tts-with-file.sh  vitest.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  database.rs  file_manager.rs  lib.rs  main.rs  tts.rs
src-tauri/tests/: cli_tests.rs  file_management_tests.rs  tts_service_tests.rs
src/components/: AudioPlayer.tsx  CharacterCounter.tsx  CompactMediaPlayer.tsx  TTSPlayer.tsx  UsageStatsDisplay.tsx
src/components/__tests__/: AudioPlayer.test.tsx  CharacterCounter.test.tsx  TTSPlayer.test.tsx  UsageStatsDisplay.test.tsx
src/test/: setup.ts
src/test/mocks/: server.ts
test-scripts/: test-clipboard.sh  test-direct.sh  test-tts-cli.sh  tts-hotkey.applescript  tts-player.sh  tts-test-debug.sh
tests/: performance.test.ts
tests/e2e/: raycast_integration.bats  user_journey.test.ts
tests/fixtures/: mockAudioData.ts
