[package]
name = "tts-player"
version = "0.1.0"
description = "A TTS audio player with ElevenLabs integration"
authors = ["Brady Price"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-cli = "2.0"
tauri-plugin-clipboard-manager = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.8"
